[package]
name = "issue_myst"
version = "0.1.0"
authors = ["CodeMyst <codemyst@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
serde_json = "1.0.53"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "serve", "json"]

[dependencies.reqwest]
version = "0.10.6"
features = ["blocking", "json"]